--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "3.12.2",
     "eslint-config-airbnb-base": "11.0.0",
     "eslint-plugin-import": "2.2.0",
+    "eslint-plugin-mocha": "^4.11.0",
     "mocha": "^3.3.0",
     "request": "^2.81.0",
     "request-promise": "^4.2.0"
